# TsaraIA

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml
backend/: .gitignore  app.py  main.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/src/: models.py  parser.py  prompt.py  rag.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ChatbotInterface.jsx  ResearchMessage.jsx
