[project]
name = "tsaraia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "fastapi>=0.116.1",
    "fiona>=1.10.1",
    "geopandas>=1.1.1",
    "hf-xet>=1.1.8",
    "kagglehub>=0.3.13",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-huggingface>=0.3.1",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "pip>=25.2",
    "sentence-transformers>=5.1.0",
    "setuptools>=80.9.0",
    "streamlit>=1.49.0",
    "uvicorn>=0.35.0",
    "wheel>=0.45.1",
]
